--- a/styles/pageprojet.css
+++ b/styles/pageprojet.css
@@ -848,7 +848,11 @@ section {
 
   .label2 {
     padding-left: 0;
-    font-size: 3vh;
+    font-size: 2vh;
+  }
+
+  .value2 {
+    font-size: 1.5vh;
   }
 
   .text-top {
@@ -861,8 +865,9 @@ section {
   }
 
   .footer {
-    padding-bottom: 10vh;
-    height: 10vh;
+    padding-left: 15vw;
+    padding-bottom: 5vh;
+    height: 1vh;
   }
 
 }
