--- a/styles/projets.css
+++ b/styles/projets.css
@@ -3,35 +3,35 @@
 }
 
 @font-face {
-font-family: "PPNeueBit";
-src: url(/fonts/PPNeueBit-Bold.otf) format("opentype");
-font-weight: 100;
-font-style: normal;
+  font-family: "PPNeueBit";
+  src: url(/fonts/PPNeueBit-Bold.otf) format("opentype");
+  font-weight: 100;
+  font-style: normal;
 }
 
 @font-face {
-font-family: "Pixter";
-src: url(/fonts/pixter-granular.ttf) format("truetype");
-font-weight: 100;
-font-style: normal;
+  font-family: "Pixter";
+  src: url(/fonts/pixter-granular.ttf) format("truetype");
+  font-weight: 100;
+  font-style: normal;
 }
 
 
 body {
-overflow: hidden;
-background-color: #000000;
-color: #b3b3a7;
-font-family: "Pixter", sans-serif;
-margin: 0;
-padding: 0;
+  overflow: hidden;
+  background-color: #000000;
+  color: #b3b3a7;
+  font-family: "Pixter", sans-serif;
+  margin: 0;
+  padding: 0;
 }
 
 header {
-display: flex;
-justify-content: space-between;
-align-items: center;
-padding: 2vw 4vh;
-position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2vw 4vh;
+  position: relative;
   z-index: 999;
 }
 
@@ -71,46 +71,46 @@ nav ul li a:hover {
 }
 
 .container img {
-cursor: grab;
-width: 100vw;
-height: 100vh;
-object-fit: cover;
+  cursor: grab;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
 }
 
 .container {
-position: absolute;
-top: 7vh;
-left: 0;
-width: 500vw;
-height: 80vh;
-display: flex;
+  position: absolute;
+  top: 7vh;
+  left: 0;
+  width: 500vw;
+  height: 80vh;
+  display: flex;
 }
 
 .scroller {
-position: absolute;
-top: 50vh;
-left: 0;
-transform: translate(0, -50vh);
-font-family: "Pixter", sans-serif;
-text-transform: uppercase;
-cursor: pointer;
-line-height: 120%;
+  position: absolute;
+  top: 50vh;
+  left: 0;
+  transform: translate(0, -50vh);
+  font-family: "Pixter", sans-serif;
+  text-transform: uppercase;
+  cursor: pointer;
+  line-height: 120%;
 }
 
 section {
-cursor: grab;
-position: relative;
-width: 420vh;
-height: 100vh;
-padding: 3vw 5vw 0 5vw;
-display: flex;
-gap: 1.5vh;
-overflow: hidden;
+  cursor: grab;
+  position: relative;
+  width: 420vh;
+  height: 100vh;
+  padding: 3vw 5vw 0 5vw;
+  display: flex;
+  gap: 1.5vh;
+  overflow: hidden;
 }
 
 .img {
-width: 100vw;
-height: 100vh;
+  width: 100vw;
+  height: 100vh;
 }
 
 .img {
@@ -125,20 +125,22 @@ height: 100vh;
 }
 
 .img:hover img {
-filter: blur(5px) brightness(0.7);
+  filter: blur(5px) brightness(0.7);
 }
 
 .project-info {
-pointer-events: none;
-position: absolute;
-top: 40%;         /* Centré verticalement */
-left: 53%;        /* Centré horizontalement */
-transform: translate(-50%, -50%);
-color: white;
-text-align: center;
-transition: transform 0.3s ease;
-font-family: "PPNeueBit", sans-serif;
-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+  pointer-events: none;
+  position: absolute;
+  top: 40%;
+  /* Centré verticalement */
+  left: 53%;
+  /* Centré horizontalement */
+  transform: translate(-50%, -50%);
+  color: white;
+  text-align: center;
+  transition: transform 0.3s ease;
+  font-family: "PPNeueBit", sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 
@@ -150,87 +152,88 @@ text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 
 
 .section-titleF {
-z-index: 9999;
-pointer-events: none;
-display: flex;
-justify-content: center;
-align-items: center;
-width: 100%;
-font-family: "Pixter", sans-serif;
-text-transform: uppercase;
-position: absolute;
-top: 5%;
-animation: fadeOut 3s forwards;
+  z-index: 9999;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  font-family: "Pixter", sans-serif;
+  text-transform: uppercase;
+  position: absolute;
+  top: 5%;
+  animation: fadeOut 3s forwards;
 }
 
 .section-titleF h1 {
-font-size: 16vw;
-font-weight: bold;
-color: #fff;
-opacity: 100%;
-padding-right: 5vh;
+  font-size: 16vw;
+  font-weight: bold;
+  color: #fff;
+  opacity: 100%;
+  padding-right: 5vh;
 }
 
 @keyframes fadeOut {
-0% {
-  opacity: 100%;
-}
-100% {
-  opacity: 1%;  
-}
+  0% {
+    opacity: 100%;
+  }
+
+  100% {
+    opacity: 1%;
+  }
 }
 
 
 .footer {
-position: fixed;
-bottom: 0;
-left: 0;
-width: 100%;
-background-color: #000000;
-padding: 20px 40px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-font-family: "Pixter", sans-serif;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: #000000;
+  padding: 20px 40px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: "Pixter", sans-serif;
 }
 
 .footer-content {
-width: 100vw;
-display: flex;
-justify-content: space-between;
-align-items: center;
+  width: 100vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .footer-section {
-display: flex;
-flex-direction: column;
-text-transform: uppercase;
+  display: flex;
+  flex-direction: column;
+  text-transform: uppercase;
 }
 
 .footer-title {
-text-decoration: underline;
-padding-bottom: 10px;
-font-size: 12px;
-font-weight: bold;
-color: #b3b3a7;
+  text-decoration: underline;
+  padding-bottom: 10px;
+  font-size: 12px;
+  font-weight: bold;
+  color: #b3b3a7;
 }
 
 .footer-scroll {
-display: flex;
-align-items: center;
-gap: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .scroll-line {
-display: inline-block;
-width: 50px;
-height: 1px;
-background-color: #ffffff;
+  display: inline-block;
+  width: 50px;
+  height: 1px;
+  background-color: #ffffff;
 }
 
 .scroll-text {
-font-size: 12px;
-color: #777;
+  font-size: 12px;
+  color: #777;
 }
 
 
@@ -239,138 +242,143 @@ color: #777;
 @media (max-width: 1800px) and (orientation: landscape) {
 
 
-section {
-  cursor: grab;
-  position: relative;
-  width: 520vh;
-  height: 100vh;
-  padding: 3vw 50vw 0 5vw;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
-}
+  section {
+    cursor: grab;
+    position: relative;
+    width: 520vh;
+    height: 100vh;
+    padding: 3vw 50vw 0 5vw;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
 
-.section-titleF h1 {
-  padding-left: 10vw;
-  font-size: 32vh;
-}
+  .section-titleF h1 {
+    padding-left: 10vw;
+    font-size: 32vh;
+  }
 
 }
 
 
 @media (max-width: 1400px) and (orientation: landscape) {
-section {
-  cursor: grab;
-  position: relative;
-  width: 520vh;
-  height: 100vh;
-  padding: 3vw 50vw 0 5vw;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
-}
+  section {
+    cursor: grab;
+    position: relative;
+    width: 520vh;
+    height: 100vh;
+    padding: 3vw 50vw 0 5vw;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
 
 
 }
 
 @media (max-width: 1100px) and (orientation: landscape) {
-section {
-  cursor: grab;
-  position: relative;
-  width: 520vh;
-  height: 100vh;
-  padding: 3vw 50vw 0 5vw;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
+  section {
+    cursor: grab;
+    position: relative;
+    width: 520vh;
+    height: 100vh;
+    padding: 3vw 50vw 0 5vw;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
+
+
+  .section-titleF h1 {
+    padding-right: 5vw;
+    font-size: 25vw;
+  }
 }
 
-
-.section-titleF h1 {
-  padding-right: 5vw;
-  font-size: 25vw;
-}
-}
-
-@media (max-width: 1100px)  and (orientation: portrait) {
-section {
-  cursor: grab;
-  position: relative;
-  width: 520vh;
-  height: 100vh;
-  padding: 3vw 50vw 0 5vw;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
-}
+@media (max-width: 1100px) and (orientation: portrait) {
+  section {
+    cursor: grab;
+    position: relative;
+    width: 520vh;
+    height: 100vh;
+    padding: 3vw 50vw 0 5vw;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
 
 
-.section-titleF h1 {
-  display: none ;
-}
+  .section-titleF h1 {
+    display: none;
+  }
 }
 
-@media (max-width: 1002px)  and (orientation: landscape) {
+@media (max-width: 1002px) and (orientation: landscape) {
 
 
-section {
-  margin-top: 5vh;
-  cursor: grab;
-  position: relative;
-  width: 520vh;
-  height: 75vh;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
-}
+  section {
+    margin-top: 5vh;
+    cursor: grab;
+    position: relative;
+    width: 520vh;
+    height: 75vh;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
 
-.project-info {
-  width: 20vw;
-  font-size: 5vh;
-}
+  .project-info {
+    width: 20vw;
+    font-size: 5vh;
+  }
 
-.project-title {
-  font-size: 10vh;
-}
+  .project-title {
+    font-size: 10vh;
+  }
 
-.section-titleF h1 {
-  display: none ;
-}
+  .section-titleF h1 {
+    display: none;
+  }
 }
 
 
 @media (max-width: 768px) and (orientation: portrait) {
-nav {
-  padding-top: 1.5vh
-}
+  nav {
+    padding-top: 1.5vh
+  }
 }
 
 
 
 @media (max-width: 480px) and (orientation: portrait) {
-nav {
-  padding-top: 1.5vh;
-}
+  nav {
+    padding-top: 1.5vh;
+  }
 
-.project-info {
-  padding-bottom: 5vh;
-}
+  .project-info {
+    padding-bottom: 15vh;
+  }
 
-section {
-  margin-top: 5vh;
-  cursor: grab;
-  position: relative;
-  width: 8000vh;
-  height: 75vh;
-  padding: 3vw 15vw 0 5vw;
-  display: flex;
-  gap: 1.5vh;
-  overflow: hidden;
-}
+  section {
+    margin-top: 5vh;
+    cursor: grab;
+    position: relative;
+    width: 8000vh;
+    height: 65vh;
+    padding: 3vw 15vw 0 5vw;
+    display: flex;
+    gap: 1.5vh;
+    overflow: hidden;
+  }
 
-.section-titleF h1 {
-  display: none ;
-}
+  .section-titleF h1 {
+    display: none;
+  }
+
+  .footer {
+    height: 1vh;
+    padding-bottom: 3vh;
+  }
 }
 
 @media (max-width: 480px) and (max-height: 580px) and (orientation: portrait) {
